Update tests, remove collections.toList